--- a/style.css
+++ b/style.css
@@ -1,2 +1,230 @@
+h1
+{text-align:center;
+  color: #fff;
+  background-color: #f00;
+  margin: 0 auto;
+  padding: 10px;
+}
 
+h1:active,h1:hover
+{
+  background: #fff;
+  color: #000000;
+}
+
+hr { color: #EFEFEF; }
+
+div 
+{text-align: center;
+  color: #fff;
+  background: #f00;
+  margin:0;
+  padding: 10px 0;
+  font-size: 18px;
+}
+
+div:active,div:hover
+{
+  background: rgb(255, 255, 255);
+  color: #000000;
+  font-family: 'Lucida Sans',
+   'Lucida Sans Regular',
+    'Lucida Grande',
+     'Lucida Sans Unicode',
+     Verdana, sans-serif;
+}
+
+label 
+{
+  color: #fff;
+  padding: 10px;
+  text-align: center;  
+  font-size: 30px;  
+  background: #f00;      
+  padding: 5px;
+}
+
+label:active,label:hover
+{
+  background: #fff;
+  color: #000000;
+}
+
+input
+{
+  outline:none;
+  padding: 10px;
+  width: 130px;
+  text-align: center;
+  height: 20px;
+  background: #fff;
+  border: #fff;
+  font-size: 20px;
+  color: #f00;
+}
+
+.nabza2
+{
+  font-size: 30px;
+  color: #fff;
+}
+
+h2
+{
+  background: #f00;
+  font-size: 25px;
+  width: 300px;
+  color: #fff;
+  text-align: center;
+}
+
+h2:active,h2:hover
+{
+  background-color: #fff;
+  color: #000000;
+}
+
+.nabza
+{
+  font-size: 50px;
+  background: #f00;
+  color: #fff;
+}
+
+a
+{
+  color:#fff;
+  font-size: 25px;
+  background: rgb(0, 0, 0);
+
+}
+
+.link1:link, .link1:visited 
+{
+color: #fff;
+background-color: rgb(0, 0, 0);
+display: inline-block;
+padding: 10px 20px;
+border: 1px solid #f00;
+text-decoration: none;
+text-align: center;
+font: 16px Arial, sans-serif;
+}
+
+.link1:hover, .link1:active 
+{
+background-color: #ffffff;
+border-color: #000000;
+color: rgb(0, 0, 0);
+font-family: 'Lucida Sans', 
+'Lucida Sans Regular',
+ 'Lucida Grande', 
+ 'Lucida Sans Unicode', 
+ Geneva,
+  Verdana,
+   sans-serif;
+font-size: 17px;
+}
+
+a:link
+{
+  text-decoration: none;
+}
+
+a:visited
+{
+text-decoration: none;
+}
+a:active
+{
+text-decoration: none;
+}
+a:hover
+{
+text-decoration: none;
+}
+a.forumlink:hover
+{
+text-decoration:none;
+}
+
+.nabza2:hover, .nabza2:active 
+{
+background-color: #ffffff;
+border-color: #000000;
+color: rgb(0, 0, 0);
+font-family: andalus;
+font-size: 30px;
+}
+
+input:hover, input:active 
+{
+background-color: #ffffff;
+border-color: #000000;
+color: rgb(0, 0, 0);
+font-family: andalus;
+font-size: 25px;
+width: 160px;
+}
+
+img 
+{
+  background: #000000;
+  border:10px solid #000000;
+  width: 50px;
+  height: 40px;
+}
+
+img:hover
+{
+  width: 60px;
+  height: 50px;
+  background: #fff;
+}
+
+.nabza:hover,.nabza:active
+{
+  background: #fff;
+  color: #000000;
+}
+
+hr:active,hr:hover
+{
+  color: #f00;
+  background: rgb(255, 255, 255);
+  height: 4px;
+}
+table,td
+{
+  border: 1px solid rgb(0, 0, 0);
+  text-align: center;
+  color: #000000;
+  margin: 0 auto;
+  padding: 8px;
+  width: 500px;
+  height: 40px;
+  background: #ddd;
+}
+caption
+{
+  color: #fff;
+  text-align: center;
+  font-size: 25px;
+  padding: 8px 0;
+  background: #f00;
+}
+.head
+{
+  background: rgb(228, 221, 221);
+  padding: 5px;
+  font-size: 30px;
+}
+.head:hover
+{
+  background-color: rgb(226, 150, 150);
+}
+.tablebody:hover
+{
+  background-color: #e6ee9c;
+}
 
