--- a/about.css
+++ b/about.css
@@ -5,6 +5,25 @@ body
     text-align: center;
 }
 
+body::-webkit-scrollbar 
+{
+    /* عرض Scrollbar */
+    width: 5px;
+   }
+   body::-webkit-scrollbar-track {
+    /* تلوين منطقة التي يتحرك فيها Scroll */
+    background: #1d2936;
+   }
+   body::-webkit-scrollbar-thumb {
+    /* تغيير لون Scroll */
+    background-color: rgb(255, 255, 255);
+
+    /* تدوير أركان الإطار Scroll */
+    border-radius: 100px;
+
+    /* خاصة بحجم ونوع ولون اﻹطار Scroll */
+    border: 3px solid #1c9954
+   }
 h1
 {
     text-align: center;
