--- a/style.css
+++ b/style.css
@@ -1,129 +1,82 @@
 
-body 
+@import url('https://fonts.googleapis.com/css?family=El+Messiri');
+
+html, body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'El Messiri', sans-serif;
+  background: #000000;
+  text-align: center;
+}
+
+.link
 {
-   background: #000000;
-   font-family: Georgia, 'Times New Roman', Times, serif;
-
+  text-align: center;
+  font-size: 25px;
+  background-color: #eecf1d;
+  color: black; 
+  position: 50% 50%;
+  border: 5px solid #fff;
+  border-radius: 5px;
+  padding: 5px;
+  transition: all 0.5s;
+  display: block;
+  margin-left: 50px;
+  margin-right: 50px;
 }
-
-body::-webkit-scrollbar 
+.link:hover
 {
-    /* عرض Scrollbar */
-    width: 5px;
-   }
-   body::-webkit-scrollbar-track {
-    /* تلوين منطقة التي يتحرك فيها Scroll */
-    background: #1d2936;
-   }
-   body::-webkit-scrollbar-thumb {
-    /* تغيير لون Scroll */
-    background-color: rgb(255, 255, 255);
-
-    /* تدوير أركان الإطار Scroll */
-    border-radius: 100px;
-
-    /* خاصة بحجم ونوع ولون اﻹطار Scroll */
-    border: 3px solid #1c9954
-   }
-
-img
+  background: #000000;
+  color: #fff;
+  transition: all 0.50s;
+  border: 5px solid #fff;
+  padding: 10px;
+  font-size: 30;
+}
+.link:active
 {
-   margin: auto;
-   display: block;
+  transition: all 0.3s;
+  background: #feed01;
+  color: #000000;
 }
-
-nav {
-    position: relative;
-    margin: 270px auto 0;
-    width: 590px;
-    height: 50px;
-    background-color: #000000;
-    border-radius: 10px;
-    font-size: 0;
-}
-
-nav a {
-    font-size: 15px;
-    text-transform: uppercase;
-    color: white;
-    text-decoration: none;
-    line-height: 50px;
-    position: relative;
-    z-index: 1;
-    display: inline-block;
-    text-align: center;
-}
-
-nav .animation {
-    position: absolute;
-    height: 100%;
-    top: 0;
-    z-index: 0;
-    background: #1c9954;
-    border-radius: 10px;
-    transition: all  .5s ease  0s;
-}
-
-
-a:nth-child(1) {
-    width: 100px;
-}
-nav .start-home,a:nth-child(1):hover~.animation {
-    width: 100px;
-    left: 0;
-}
-
-
-a:nth-child(2) {
-    width: 110px;
-}
-nav .start-about,a:nth-child(2):hover~.animation {
-    width: 110px;
-    left: 100px;
-}
-
-
-a:nth-child(3) {
-    width: 100px;
-}
-nav .start-Blog,a:nth-child(3):hover~.animation {
-    width: 100px;
-    left: 210px;
-}
-
-
-a:nth-child(4) {
-    width: 160px;
-}
-nav .start-Protfolio,a:nth-child(4):hover~.animation {
-    width: 160px;
-    left: 310px;
-}
-
-
-a:nth-child(5) {
-    width: 120px;
-}
-nav .start-contact,a:nth-child(5):hover~.animation {
-    width: 120px;
-    left: 470px;
-}
-a:active
+.link:link
 {
-    background-color: #48bd39;
-    border-radius: 10px;
-}
-a
-{
-   cursor: url("cur116.cur");
+  text-decoration: none;
 }
 
-div
+.link:visited
 {
-    text-align: center;
+text-decoration: none;
 }
-@media only screen and (max-width: 480px) {
-    img {
-      width: 100%;
-    }
-  }
+.link:active
+{
+text-decoration: none;
+}
+.link:hover
+{
+text-decoration: none;
+}
+.link.forumlink:hover
+{
+text-decoration:none;
+}
+
+.pagelogo
+{
+  width: 200px;
+  height: 200px;
+  margin-top: 30px;
+}
+.foteer
+{
+  width: 50px;
+  height: 50px;
+}
+.footer
+{
+  color: #fff;
+}
