--- a/page1.css
+++ b/page1.css
@@ -39,11 +39,11 @@ body::-webkit-scrollbar {
 }
 body::-webkit-scrollbar-track {
 	/* تلوين منطقة التي يتحرك فيها Scroll */
-	background: #498254;
+	background: #ffffff;
 }
 body::-webkit-scrollbar-thumb {
 	/* تغيير لون Scroll */
-	background-color: #feed01;
+	background-color: #498254;
 
 	/* تدوير أركان الإطار Scroll */
 	border-radius: 10px;
@@ -58,33 +58,35 @@ body::-webkit-scrollbar-thumb {
 
 .link1
 {
-    color: #ffffff;
-    background: #498254;
-    padding: 5px;
-    margin-left: 500px;
-    margin-right: 500px;
-    border-radius: 8px;
-    font-size: 25px;
-    transition: all 0.5s;
-    border: 2px solid #fff;
+  text-align: center;
+  font-size: 25px;
+  background-color: #4c8f59;
+  color: #fff; 
+  position: 50% 50%;
+  border: 5px solid #fff;
+  border-radius: 5px;
+  padding: 5px;
+  transition: all 0.5s;
+  display: block;
+  margin-left: 150px;
+  margin-right: 150px;
 }
 
 .link1:hover
 {
-    background: #000000;
-    color: #4c8f59;
-    transition: all 0.50s;
-    padding: 10px;
-    font-size: 26px;
+  background: #1b3721;
+  color: #fff;
+  transition: all 0.50s;
+  border: 5px solid #fff;
+  padding: 10px;
+  font-size: 30;
 }
 
 .link1:active
 {
-    background: #000000;
-    color: #ffffff;
-    transition: all 0.50s;
-    padding: 10px;
-    font-size: 26px;
+  transition: all 0.3s;
+  background: #3b7447;
+  color: #fff;
 }
 
 a
