--- a/page1-2-1.css
+++ b/page1-2-1.css
@@ -22,15 +22,18 @@ body {
 
 h1
 {
-    background: #4c8f59;
-    color: #fff;
-    font-size: 30px;
-    margin-left: 500px;
-    margin-right: 500px;
-    padding: 5px;
-    border: 5px solid #fff;
-    border-radius: 8px;
-    transition: all 0.5s;
+  text-align: center;
+  font-size: 25px;
+  background-color: #4c8f59;
+  color: #fff; 
+  position: 50% 50%;
+  border: 5px solid #fff;
+  border-radius: 5px;
+  padding: 5px;
+  transition: all 0.5s;
+  display: block;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 h1:hover
