--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 {
   background: #1b3721;
   transform: scale(1.1);
+  box-shadow: 2px 2px 10px 10px gray;
 }
 .link:active
 {
@@ -67,12 +68,7 @@ text-decoration: none;
 text-decoration:none;
 }
 
-.pagelogo
-{
-  width: 200px;
-  height: 200px;
-  margin-top: 30px;
-}
+
 .foteer
 {
   width: 50px;
@@ -94,4 +90,34 @@ body::-webkit-scrollbar-thumb {
 
 	border-radius: 10px;
 }
+
+.pagelogo:hover
+{
+    position: relative;
+    box-shadow: 0 0 10px 10px rgba(224, 213, 213, 0.5);
+    padding: 10px;
+    background: rgb(0, 0, 0);
+    transform: scale(1.1);
+    transition: 0.7s ease;
+    margin-top: 10px;
+}
+
+.pagelogo {
+    width: 200px;
+    transition: 0.7s ease;
+    margin-top: 10px;
+}
+
+img::after {
+    content: 'Bassem';
+    position: absolute;
+    z-index: -1; /* hide shadow behind image */
+    box-shadow: 0 15px 20px rgba(182, 169, 169, 0.3);
+    width: 70%;
+    left: 15%; /* one half of the remaining 30% */
+    height: 100px;
+    bottom: 0;
+    transform: scale(1.1);
+}
+
 
