--- a/page1-2-2.css
+++ b/page1-2-2.css
@@ -147,20 +147,21 @@ time
 
 h1
 {
-  color: #000000;
-  font-size: 20px;
-  text-shadow: 2px 2px 5px #4c8f59; 
-  text-align: right;
-  margin: 20px;
-  background: #fff;
-  border-radius: 8px;
-  margin-left: 900px;
-  padding: 3px;
+  text-align: center;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0); 
+  text-shadow: 2px 2px 5px #498254;
   position: 50% 50%;
   border: 5px solid #fff;
+  border-radius: 5px;
+  padding: 4px;
   margin-left: 50px;
+  margin-right: 50px;
   text-decoration: none;
+  font-size: 1.5em;
+  font-weight: 600;
   display: inline-block;
+  padding: 0.9375em 2.1875em;
   letter-spacing: 1px;
   border-radius: 15px;
   margin-bottom: 40px;
