--- a/home.css
+++ b/home.css
@@ -295,27 +295,6 @@ label {
     display: block;
 }
 
-
-.button,
-.button1 {
-    display: block;
-}
-
-.button1 {
-    background: #fff;
-    color: #000;
-    padding: 10px;
-    border-radius: 5px;
-    margin-left: 8px;
-    text-align: center;
-    border: black;
-    width: 206px;
-    transition: all 0.5s;
-    cursor: pointer;
-    font-size: 15px;
-    margin: 0 auto;
-}
-
-.button {
-    margin: 0 auto;
+hr {
+    margin-top: 200px;
 }
