--- a/home.css
+++ b/home.css
@@ -298,3 +298,85 @@ label {
 hr {
     margin-top: 200px;
 }
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ffff00;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #000;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #011;
+}
+
+ul li {
+    list-style-type: none;
+    display: inline;
+}
+
+nav {
+    background-color: #000;
+    float: left;
+    margin-top: 10px;
+}
+
+li {
+    padding: 10px;
+    font-size: 25px;
+}
+
+.nav1 {
+    text-decoration: none;
+    color: #fff;
+    margin-right: 10px;
+}
+
+a:hover {
+    color: #ffff00;
+}
+
+.contcnt {
+    float: right;
+    margin-right: 120px;
+}
+
+h5 {
+    margin-top: 25px;
+}
+
+.hr1 {
+    background-color: #ffff00;
+    height: 10px;
+    margin-top: 200px;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+}
+
+.h3-1 {
+    font-size: 30px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+h2 {
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+footer {
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
